--- a/demos/firebase.html
+++ b/demos/firebase.html
@@ -21,11 +21,15 @@
 <body unresolved>
 
   <template is="auto-binding">
+    <!-- <firebase-element id="actions" on-data-change="{{actionDataChange}}" data="{{actionsData}}" keys="{{actionsKeys}}"  location="https://actionplanr-dev.firebaseio.com/sections2/2/doc_sections/0/doc_actions" log></firebase-element> -->
 
-    <firebase-element id="base" on-data-change="{{dataChange}}" data="{{data}}" location="https://treedata-demo.firebaseio.com/demo" log></firebase-element>
-    <firebase-element id="dinosaur" on-data-change="{{dinosaurDataChange}}" data="{{dinosaurData}}" keys="{{dinosaurKeys}}" location="https://dinosaur-facts.firebaseio.com/" log></firebase-element>
-    <firebase-element id="dinosaurLimitFirst" data="{{dinosaurLimitFirstData}}" keys="{{dinosaurLimitFirstKeys}}" limitToFirst="2" location="https://dinosaur-facts.firebaseio.com/" log></firebase-element>
-    <firebase-element id="dinosaurLimitLast" data="{{dinosaurLimitLastData}}" keys="{{dinosaurLimitLastKeys}}" limitToLast="3" location="https://dinosaur-facts.firebaseio.com/" log></firebase-element>
+    <firebase-element id="base" on-data-change="{{dataChange}}" data="{{data}}" location="https://treedata-demo.firebaseio.com/demo"></firebase-element>
+
+    <firebase-element id="dinosaur" on-data-change="{{dinosaurDataChange}}" data="{{dinosaurData}}" keys="{{dinosaurKeys}}"  location="https://dinosaur-facts.firebaseio.com/"></firebase-element>
+    <firebase-element id="dinosaurOrderByChild" on-data-change="{{dinosaurOrderByChildDataChange}}" data="{{dinosaurOrderByChildData}}" keys="{{dinosaurOrderByChildKeys}}" orderByChild="order" location="https://dinosaur-facts.firebaseio.com/" log></firebase-element>
+    <firebase-element id="dinosaurLimitFirst" data="{{dinosaurLimitFirstData}}" keys="{{dinosaurLimitFirstKeys}}" limitToFirst="2" location="https://dinosaur-facts.firebaseio.com/"></firebase-element>
+    <firebase-element id="dinosaurLimitLast" data="{{dinosaurLimitLastData}}" keys="{{dinosaurLimitLastKeys}}" limitToLast="3" location="https://dinosaur-facts.firebaseio.com/"></firebase-element>
+    <firebase-element id="dinosaurStartEndAt" on-data-change="{{dinosaurStartEndAtDataChange}}" data="{{dinosaurStartEndAtData}}" keys="{{dinosaurStartEndAtKeys}}"  orderByKey="true" start="b"   location="https://dinosaur-facts.firebaseio.com/"></firebase-element>
 
     <h3>Top-level properties persist automatically:</h3>
 
@@ -52,10 +56,10 @@
     <button on-tap="{{removeLocal}}">Remove Local</button>
     <button on-tap="{{resetRemote}}">Reset remote</button>
     <button on-tap="{{removeRemote}}">Remove Remote</button>
-
+    <br>
     <hr>
 
-    <h2>Dinosaur Facts All</h2>
+    <h2>Dinosaur Facts All (working)</h2>
     <div horizontal layout top style="font-weight: bold; padding: 5px;; text-align: right; border: 1px solid; width: 760px;">
       <div style="width: 150px; text-align: left;">Name</div>
       <div style="width: 100px;">Height</div>
@@ -78,9 +82,35 @@
     </template>
     <br>
 
-    <hr>
+    <br>
 
-    <h2>Dinosaur Facts First 2</h2>
+    <h2>Dinosaur Order by Child Order (not working)</h2>
+    <div horizontal layout top style="font-weight: bold; padding: 5px;; text-align: right; border: 1px solid; width: 760px;">
+      <div style="width: 150px; text-align: left;">Name</div>
+      <div style="width: 100px;">Height</div>
+      <div style="width: 100px;">Length</div>
+      <div style="width: 100px;">Weight</div>
+      <div style="width: 100px;">Vppeared</div>
+      <div style="width: 100px;">Vanished</div>
+      <div style="width: 100px; font-weight: bold;">Order</div>
+    </div>
+
+    <template repeat="{{key in dinosaurOrderByChildKeys }}">
+      <div horizontal layout top style="padding: 5px; text-align: right; border-bottom: 1px dotted; width: 760px;">
+        <div style="width: 150px; text-align: left;">{{key}}</div>
+        <div style="width: 100px;">{{dinosaurOrderByChildData[key].height}}</div>
+        <div style="width: 100px;">{{dinosaurOrderByChildData[key].length}}</div>
+        <div style="width: 100px;">{{dinosaurOrderByChildData[key].weight}}</div>
+        <div style="width: 100px;">{{dinosaurOrderByChildData[key].appeared}}</div>
+        <div style="width: 100px;">{{dinosaurOrderByChildData[key].vanished}}</div>
+        <div style="width: 100px;">{{dinosaurOrderByChildData[key].order}}</div>
+      </div>
+    </template>
+
+    <br>
+    <br>
+
+    <h2>Dinosaur Facts First 2 (working)</h2>
     <div horizontal layout top style="font-weight: bold; padding: 5px;; text-align: right; border: 1px solid; width: 760px;">
       <div style="width: 150px; text-align: left;">Name</div>
       <div style="width: 100px;">Height</div>
@@ -93,7 +123,7 @@
     <template repeat="{{key in dinosaurLimitFirstKeys }}">
       <div horizontal layout top style="padding: 5px; text-align: right; border-bottom: 1px dotted; width: 760px;">
         <div style="width: 150px; text-align: left;">{{key}}</div>
-        <div style="width: 100px;">{{dinosaurLimitFirst2Data[key].height}}</div>
+        <div style="width: 100px;">{{dinosaurLimitFirstData[key].height}}</div>
         <div style="width: 100px;">{{dinosaurLimitFirstData[key].length}}</div>
         <div style="width: 100px;">{{dinosaurLimitFirstData[key].weight}}</div>
         <div style="width: 100px;">{{dinosaurLimitFirstData[key].appeared}}</div>
@@ -102,10 +132,9 @@
       </div>
     </template>
     <br>
+    <br>
 
-    <hr>
-
-    <h2>Dinosaur Last First 3</h2>
+    <h2>Dinosaur Last First 3 (working)</h2>
     <div horizontal layout top style="font-weight: bold; padding: 5px;; text-align: right; border: 1px solid; width: 760px;">
       <div style="width: 150px; text-align: left;">Name</div>
       <div style="width: 100px;">Height</div>
@@ -126,10 +155,39 @@
         <div style="width: 100px;">{{dinosaurLimitLastData[key].order}}</div>
       </div>
     </template>
+    <br>
+    <br>
 
-
-
+    <h2>Dinosaur Starting with B  (not working)</h2>
+    <div horizontal layout top style="font-weight: bold; padding: 5px;; text-align: right; border: 1px solid; width: 760px;">
+      <div style="width: 150px; text-align: left;">Name</div>
+      <div style="width: 100px;">Height</div>
+      <div style="width: 100px;">Length</div>
+      <div style="width: 100px;">Weight</div>
+      <div style="width: 100px;">Vppeared</div>
+      <div style="width: 100px;">Vanished</div>
+      <div style="width: 100px;">Order</div>
+    </div>
+    <template repeat="{{key in dinosaurStartEndAtKeys }}">
+      <div horizontal layout top style="padding: 5px; text-align: right; border-bottom: 1px dotted; width: 760px;">
+        <div style="width: 150px; text-align: left;">{{key}}</div>
+        <div style="width: 100px;">{{dinosaurStartEndAtData[key].height}}</div>
+        <div style="width: 100px;">{{dinosaurStartEndAtData[key].length}}</div>
+        <div style="width: 100px;">{{dinosaurStartEndAtData[key].weight}}</div>
+        <div style="width: 100px;">{{dinosaurStartEndAtData[key].appeared}}</div>
+        <div style="width: 100px;">{{dinosaurStartEndAtData[key].vanished}}</div>
+        <div style="width: 100px;">{{dinosaurStartEndAtData[key].order}}</div>
+      </div>
     </template>
+    <br>
+    <br>
+
+
+    <hr>
+    <br>
+
+    <button on-tap="{{loopData}}">Loop Data</button>
+    <br>
     <br>
 
   </template>
@@ -137,7 +195,7 @@
   <script>
 
     addEventListener('polymer-ready', function(e) {
-      console.log('polymer-ready', this.limitFirstTo);
+      console.log('polymer-ready');
     });
 
     addEventListener('template-bound', function(e) {
@@ -185,9 +243,32 @@
       };
 
       scope.dinosaurDataChange = function() {
-        console.log("dinosaurDataChange");
+        // console.log("dinosaurDataChange");
       };
 
+      scope.dinosaurOrderByChildDataChange = function() {
+        console.log("dinosaurOrderByChildDataChange", this.dinosaurOrderByChildData );
+      };
+
+      scope.dinosaurStartEndAtDataChange = function() {
+        // console.log("dinosaurStartEndAtDataChange", this.dinosaurStartEndAtData );
+      };
+
+      scope.loopData = function() {
+        var keys = this.$.dinosaurOrderByChild.keys;
+        var keysLen = keys.length;
+        console.log("loopData: dinosaurOrderByChildData", keysLen, keys );
+
+          for(var i=0; i < keysLen; i++) {
+            curKey = keys[i];
+            // curId = this.dinosaurStartEndAtData[keys[i]].id;
+            // count++;
+            var dataContent = this.dinosaurOrderByChildData[keys[i]];
+            console.log(i+1,curKey, dataContent.order, dataContent.height, dataContent.length);
+          }
+          console.log("dinosaurOrderByChildKeys keysLen: ", keysLen, "dinosaurs: ", typeof(this.dinosaurOrderByChildData),this.dinosaurOrderByChildData);
+
+      };
 
     });
   </script>
