--- a/demos/firebase.html
+++ b/demos/firebase.html
@@ -10,32 +10,28 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <!doctype html>
 <html>
 <head>
-
   <title>firebase-element</title>
-
   <script src="../../webcomponentsjs/webcomponents.js"></script>
-
   <link rel="import" href="../firebase-element.html">
-
-
-
 </head>
+
 <body unresolved>
 
   <template is="auto-binding">
     <!-- <firebase-element id="actions" on-data-change="{{actionDataChange}}" data="{{actionsData}}" keys="{{actionsKeys}}"  location="https://actionplanr-dev.firebaseio.com/sections2/2/doc_sections/0/doc_actions" log></firebase-element> -->
     <style>
-      .dinosaur-row {
-        width: 760px;
-        padding: 5px;
-        text-align: right;
-        border-bottom: 1px dotted;
-      }
+    .dinosaur-row {
+      width: 760px;
+      padding: 5px;
+      text-align: right;
+      border-bottom: 1px dotted;
+    }
     </style>
 
     <firebase-element id="base" on-data-change="{{dataChange}}" data="{{data}}" location="https://treedata-demo.firebaseio.com/demo"></firebase-element>
 
-    <firebase-element id="dinosaur" on-data-change="{{dinosaurDataChange}}" data="{{dinosaurData}}" keys="{{dinosaurKeys}}"  location="https://dinosaur-facts.firebaseio.com/"></firebase-element>
+    <firebase-element id="dinosaur" on-data-change="{{dinosaurDataChange}}" data="{{dinosaurData}}" keys="{{dinosaurKeys}}" orderByChild="order"  location="https://dinosaur-facts.firebaseio.com/"></firebase-element>
+    <firebase-element id="dinosaurChild" childEvents on-child-added="{{dinosaurChildAdded}}" orderByChild="order" location="https://dinosaur-facts.firebaseio.com/">
     <firebase-element id="dinosaurLimitFirst" data="{{dinosaurLimitFirstData}}" keys="{{dinosaurLimitFirstKeys}}" limitToFirst="2" location="https://dinosaur-facts.firebaseio.com/"></firebase-element>
     <firebase-element id="dinosaurLimitLast" data="{{dinosaurLimitLastData}}" keys="{{dinosaurLimitLastKeys}}" limitToLast="3" location="https://dinosaur-facts.firebaseio.com/"></firebase-element>
 
@@ -91,6 +87,21 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <br>
     <br>
 
+    <h2>Dinosaur Facts order by order All</h2>
+    <div horizontal layout top style="font-weight: bold; padding: 5px; text-align: right; border: 1px solid; width: 760px;">
+      <div style="width: 150px; text-align: left;">Name</div>
+      <div style="width: 100px;">Height</div>
+      <div style="width: 100px;">Length</div>
+      <div style="width: 100px;">Weight</div>
+      <div style="width: 100px;">Appeared</div>
+      <div style="width: 100px;">Vanished</div>
+      <div style="width: 100px;">Order</div>
+    </div>
+    <div id="firebase-child-added-query-wrapper" vertical layout top style="width: 760px;"></div>
+
+    <br>
+    <br>
+
     <h2>Dinosaur Facts First 2</h2>
     <div horizontal layout top style="font-weight: bold; padding: 5px;; text-align: right; border: 1px solid; width: 760px;">
       <div style="width: 150px; text-align: left;">Name</div>
@@ -139,8 +150,8 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <br>
     <br>
 
-    <h2>Dinosaur Facts order by order staring at s</h2>
-    <div horizontal layout top style="font-weight: bold; padding: 5px;; text-align: right; border: 1px solid; width: 760px;">
+    <h2>Dinosaur Facts order by order staring at p</h2>
+    <div horizontal layout top style="font-weight: bold; padding: 5px; text-align: right; border: 1px solid; width: 760px;">
       <div style="width: 150px; text-align: left;">Name</div>
       <div style="width: 100px;">Height</div>
       <div style="width: 100px;">Length</div>
@@ -212,6 +223,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       scope.listOrderByChild();
     };
 
+    scope.dinosaurChildDataChange = function() {
+      console.log("dinosaurChildDataChange", this.dinosaurChildData);
+
+    };
+
     scope.listOrderByChild = function() {
       var ref = new Firebase("https://dinosaur-facts.firebaseio.com/");
       console.log('dinosaur-facts by child order startAt letter s');
@@ -219,7 +235,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       var parentDiv = document.getElementById("firebase-query-wrapper");
       var counter = 1;
 
-      var query = ref.orderByChild("order").startAt("s").on("child_added", function(snapshot) {
+      var query = ref.orderByChild("order").startAt("p").on("child_added", function(snapshot) {
         data = data + snapshot.key() + " was " + snapshot.val().height + " meters tall" + " -- order " + snapshot.val().order + '\n';
 
         var rowDiv = document.createElement("div");
@@ -272,6 +288,64 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       });
       console.log(data);
+    };
+
+    dinosaurChildCounter = 1;
+    scope.dinosaurChildAdded = function(event) {
+      var data = '';
+      var parentDiv = document.getElementById("firebase-child-added-query-wrapper");
+
+      data = event.detail.name + " was " + event.detail.value.height + " meters tall" + " -- order " + event.detail.value.order + " -- dinosaurChildCounter: " + dinosaurChildCounter + '\n';
+      console.log(data);
+
+      var rowDiv = document.createElement("div");
+      rowDiv.setAttribute('id','childRow_' + dinosaurChildCounter.toString());
+      rowDiv.setAttribute('class','dinosaur-row');
+      rowDiv.setAttribute('horizontal',true);
+      rowDiv.setAttribute('layout',true);
+      rowDiv.setAttribute('top',true);
+      parentDiv.appendChild(rowDiv);
+      var rowDivAdded = document.getElementById("childRow_" + dinosaurChildCounter.toString());
+
+      var keyDiv = document.createElement("div");
+      keyDiv.setAttribute('style',"width: 150px; text-align: left;");
+      keyDiv.innerHTML = event.detail.name;
+      rowDivAdded.appendChild(keyDiv);
+
+      var divStyle = "width: 100px;";
+
+      var heightDiv = document.createElement("div");
+      heightDiv.setAttribute('style',divStyle);
+      heightDiv.innerHTML = event.detail.value.height;
+      rowDivAdded.appendChild(heightDiv);
+
+      var weightDiv = document.createElement("div");
+      weightDiv.setAttribute('style',divStyle);
+      weightDiv.innerHTML = event.detail.value.weight;
+      rowDivAdded.appendChild(weightDiv);
+
+      var lengthDiv = document.createElement("div");
+      lengthDiv.setAttribute('style',divStyle);
+      lengthDiv.innerHTML = event.detail.value.length;
+      rowDivAdded.appendChild(lengthDiv);
+
+      var appearedDiv = document.createElement("div");
+      appearedDiv.setAttribute('style',divStyle);
+      appearedDiv.innerHTML = event.detail.value.appeared;
+      rowDivAdded.appendChild(appearedDiv);
+
+      var vanishedDiv = document.createElement("div");
+      vanishedDiv.setAttribute('style',divStyle);
+      vanishedDiv.innerHTML = event.detail.value.vanished;
+      rowDivAdded.appendChild(vanishedDiv);
+
+      var orderDiv = document.createElement("div");
+      orderDiv.setAttribute('style',divStyle);
+      orderDiv.innerHTML = event.detail.value.order;
+      rowDivAdded.appendChild(orderDiv);
+
+      dinosaurChildCounter++;
+
     };
 
   });
