--- a/demos/firebase.html
+++ b/demos/firebase.html
@@ -34,6 +34,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     <firebase-element id="dinosaurChild" childEvents on-child-added="{{dinosaurChildAdded}}" orderByChild="order" location="https://dinosaur-facts.firebaseio.com/">
     <firebase-element id="dinosaurLimitFirst" data="{{dinosaurLimitFirstData}}" keys="{{dinosaurLimitFirstKeys}}" limitToFirst="2" location="https://dinosaur-facts.firebaseio.com/"></firebase-element>
     <firebase-element id="dinosaurLimitLast" data="{{dinosaurLimitLastData}}" keys="{{dinosaurLimitLastKeys}}" limitToLast="3" location="https://dinosaur-facts.firebaseio.com/"></firebase-element>
+    <firebase-element id="dinosaurEqualTo"  data="{{dinosaurEqualToData}}" keys="{{dinosaurEqualToKeys}}" orderByChild="order" equalTo="ornithischia"  location="https://dinosaur-facts.firebaseio.com/" log></firebase-element>
 
     <h3>Top-level properties persist automatically:</h3>
 
@@ -98,7 +99,30 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       <div style="width: 100px;">Order</div>
     </div>
     <div id="firebase-child-added-query-wrapper" vertical layout top style="width: 760px;"></div>
+    <br>
+    <br>
 
+    <h2>Dinosaur Order Equal To ornithischia</h2>
+    <div horizontal layout top style="font-weight: bold; padding: 5px; text-align: right; border: 1px solid; width: 760px;">
+      <div style="width: 150px; text-align: left;">Name</div>
+      <div style="width: 100px;">Height</div>
+      <div style="width: 100px;">Length</div>
+      <div style="width: 100px;">Weight</div>
+      <div style="width: 100px;">Appeared</div>
+      <div style="width: 100px;">Vanished</div>
+      <div style="width: 100px;">Order</div>
+    </div>
+    <template repeat="{{key in dinosaurEqualToKeys }}">
+      <div horizontal layout top style="padding: 5px; text-align: right; border-bottom: 1px dotted; width: 760px;">
+        <div style="width: 150px; text-align: left;">{{key}}</div>
+        <div style="width: 100px;">{{dinosaurData[key].height}}</div>
+        <div style="width: 100px;">{{dinosaurData[key].length}}</div>
+        <div style="width: 100px;">{{dinosaurData[key].weight}}</div>
+        <div style="width: 100px;">{{dinosaurData[key].appeared}}</div>
+        <div style="width: 100px;">{{dinosaurData[key].vanished}}</div>
+        <div style="width: 100px;">{{dinosaurData[key].order}}</div>
+      </div>
+    </template>
     <br>
     <br>
 
