Adds firebase-list for handling list-like data.

--- a/demo.html
+++ b/demo.html
@@ -9,5 +9,9 @@
 -->
 <a href="demos/firebase.html">firebase-element</a>
 <br>
+<a href="demos/list.html">firebase-element (list example)</a>
+<br>
+<a href="demos/list-priorities.html">firebase-element (list w/ priorities)</a>
+<br>
 <a href="demos/login.html">firebase-login</a>
 <br>
