--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 </head>
 <body unresolved>
 
-  <core-component-page sources='["firebase-element.html", "firebase-login.html"]'></core-component-page>
+  <core-component-page sources='["firebase-element.html", "firebase-list.html", "firebase-login.html"]'></core-component-page>
 
 </body>
 </html>
