--- a/firebase-element.html
+++ b/firebase-element.html
@@ -10,6 +10,8 @@
 <link rel="import" href="firebase-import.html">
 <link rel="import" href="../polymer/polymer.html">
 
+<script src="../observe-js/src/observe.js"></script>
+
 <!--
 Element wrapper for the Firebase Web API (http://firebase.com).
 
@@ -123,14 +125,14 @@ Example:
 @status alpha
 @snap snap.png
 -->
-<polymer-element name="firebase-element">
 <script>
   /*
     note: switching between Array and Object datatypes will mess up
     live firebase-element elements
   */
-  Polymer('firebase-element', {
-    publish: {
+  Polymer({
+    is: 'firebase-element',
+    properties: {
       /**
        * Fired when properties on `data` are added, removed, or modified.
        *
@@ -157,112 +159,168 @@ Example:
        * @attribute location
        * @type String
        */
-      location: null,
+      location: {
+        type: String,
+        observer: 'locationChanged'
+      },
       /**
        * Firebase `ref` object corresponding to `location`.
        * @attribute ref
        * @type Object
        */
-      ref: null,
+      ref: Object,
       /**
        * Restricts the number of records reflected on the client.
        * This method is deprecated. Use limitToFirst() and limitToLast() instead.
        * @attribute limit
        * @type Number
        */
-      limit: 0,
+      limit: {
+        type: Number,
+        value: 0
+      },
       /**
        * Specify a maximum number of records reflected on the client limited to the first certain number of children.
        * @attribute limitToFirst
        * @type Number
        */
-      limitToFirst: 0,
+      limitToFirst: {
+        type: Number,
+        value: 0
+      },
       /**
        * Specify a maximum number of records reflected on the client limited to the last certain number of children.
        * @attribute limitToLast
        * @type Number
        */
-      limitToLast: 0,
+      limitToLast: {
+        type: Number,
+        value: 0
+      },
       /**
        * Specify an start record for the set of records reflected on the client.
        * @attribute start
        * @type Any
        */
-      start: null,
+      start: {
+        value: null
+      },
       /**
        * Specify an ending record for the set of records reflected on the client.
        * @attribute end
        * @type Any
        */
-      end: null,
+      end: {
+        value: null
+      },
       /**
        * Specify a child key to order the set of records reflected on the client.
        * @attribute orderByChild
        * @type Any
        */
-      orderByChild: null,
+      orderByChild: {
+        type: String,
+        value: null
+      },
       /**
        * Specify to order by key the set of records reflected on the client.
        * @attribute orderByKey
        * @type Boolean
        */
-      orderByKey: false,
+      orderByKey: {
+        type: Boolean,
+        value: false
+      },
       /**
        * Specify to order by priority the set of records reflected on the client.
        * @attribute orderByPriority
        * @type Boolean
        */
-      orderByPriority: false,
+      orderByPriority: {
+        type: Boolean,
+        value: false
+      },
       /**
        * Specify to order by value the set of records reflected on the client.
        * @attribute orderByValue
        * @type Boolean
        */
-      orderByValue: false,
+      orderByValue: {
+        type: Boolean,
+        value: false
+      },
       /**
        * Specify to create a query which includes children which match the specified value. The argument type depends on which orderBy*() function was used in this query. Specify a value that matches the orderBy*() type.
        * @attribute equalTo
        * @type Any
        */
-      equalTo: null,
+      equalTo: {
+        value: null
+      },
       /**
        * The `data` object mapped to `location`.
        * @attribute data
        * @type Object
        */
-      data: null,
+      data: {
+        type: Object,
+        value: null,
+        notify: true
+      },
       /**
        * All keys in data (array of names, if you think of data as a set of name/value pairs).
        * @attribute keys
        * @type Array
        */
-      keys: null,
+      keys: {
+        type: Array,
+        value: null,
+        notify: true
+      },
       /**
        * If true, will fire `child-added`,`child-moved` `child-removed`, `child-changed` events.
        * @attribute childEvents
        * @type Boolean
        */
-      childEvents: false,
+      childEvents: {
+        type: Boolean,
+        value: false
+      },
       /**
        * When set, data will be stored with the given Firebase priority level.
        * @attribute priority
        * @type Number
        */
-      priority: null,
+      priority: {
+        type: Number,
+        value: null,
+        observer: 'priorityChanged'
+      },
       /**
        * Reflects whether the data at this locaation as been read at least once
        * @attribute initialized
        * @type Boolean
        */
-      dataReady: false,
+      dataReady: {
+        type: Boolean,
+        value: false,
+        notify: true
+      },
       /**
        * If true, will log various occurances to the console api.
        * @attribute log
        * @type Boolean
        */
-      log: false
+      log: {
+        type: Boolean,
+        value: false
+      },
+      query: {
+        type: Object,
+        observer: 'queryChanged'
+      }
     },
-    observe: {
+    observers: {
       'ref limit start end limitToFirst limitToLast equalTo': 'requery'
     },
     locationChanged: function() {
@@ -319,13 +377,13 @@ Example:
     },
     queryChanged: function() {
       // initialize
-      this._setData(null);
+      this._setLocalData(null);
       // data acquisition
       this.dataReady = false;
       this.valueLoading = true;
       this.query.once('value', this.valueLoaded, this.errorHandler, this);
       // observe server-side data
-      this.job('observeQuery', this.observeQuery, 0);
+      this.async(this.observeQuery);
     },
     valueLoaded: function(snapshot) {
       this.valueLoading = false;
@@ -335,15 +393,16 @@ Example:
       }
       this.log && console.log('acquired value ' + this.location);
       this.dataReady = true;
-      this._setData(snapshot.val());
+      this._setLocalData(snapshot.val());
       this.fire('data-ready', this.data);
       if (this.data) {
         this.dataChange();
       }
     },
-    _setData: function(data) {
+    _setLocalData: function(data) {
+      console.log('_setLocalData', data);
       this.closeObserver();
-      this.data = this._data = data;
+      this.data = this._localData = data;
       this.observeData();
     },
     //
@@ -383,8 +442,8 @@ Example:
       }
     },
     dataChanged: function() {
-      if (this._data !== this.data) {
-        this._setData(this.data);
+      if (this._localData !== this.data) {
+        this._setLocalData(this.data);
         this.commit();
       }
     },
@@ -461,12 +520,12 @@ Example:
       if (this.data instanceof Array) {
         this.data.splice(key, 1);
         if (this.data.length == 0) {
-          this._setData(null);
+          this._setLocalData(null);
         }
       } else if (this.data) {
         delete this.data[key];
         if (Object.keys(this.data).length === 0) {
-          this._setData(null);
+          this._setLocalData(null);
         }
       }
     },
@@ -486,6 +545,7 @@ Example:
       this.commit();
     },
     observeObject: function(added, removed, changed, getOldValueFn) {
+      console.log(arguments);
       // client-side dynamics
       var ctrlr = this;
       Object.keys(added).forEach(function(property) {
@@ -535,4 +595,3 @@ Example:
     }
   });
 </script>
-</polymer-element>
